# CourseProject1

./: .env.example  README.md  main.py  pyproject.toml
src/: external_api.py  utils.py  views.py
tests/: conftest.py  test_utils.py
